--- a/index2.html
+++ b/index2.html
@@ -61,19 +61,7 @@
           ></i>
         </div>
         <div class="text-crush">
-          Đi qua vài mối tình đổ vỡ, anh cứ nghĩ bản thân chẳng thể nào yêu thêm
-          ai được nữa. Anh đã quen với cuộc sống làm bất cứ chuyện gì cũng một
-          mình trong một thời gian rất dài. Dài đến mức anh chẳng nhớ nổi chính
-          xác thời gian nữa. Nhưng rồi duyên số đã giúp anh gặp được em và rồi
-          anh thích em từ lúc nào chẳng hay. Anh không thể nào kiềm chế được nói
-          chuyện với em, tiếp xúc gần em. Mỗi ngày trôi qua, cảm xúc của anh
-          ngày càng mãnh liệt. Anh không thể ngăn bản thân ngừng nhớ về em,
-          ngừng yêu em. Dường như trái tim này nó chẳng phải là của anh nữa. Tại
-          sao nó lại không nghe lời anh vậy nhỉ? Thật khó để dũng cảm đứng trước
-          mặt em và nói cho em biết rằng anh yêu em. Đó chính là lý do anh ngồi
-          đây viết những dòng này. Đồng ý làm người yêu anh nhé, Yến! Anh yêu em
-          vô điều kiện, dù có chuyện gì xảy ra, anh vẫn mong người anh muốn đi
-          cùng trong cuộc đời này là em!
+          YÊU EM VÃI Ò
         </div>
       </div>
     </div>
